tutorverse-frontend/kubernetes/eduverse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutorverse
  namespace: tutorverse
  labels:
    app: tutorverse
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tutorverse
  template:
    metadata:
      labels:
        app: tutorverse
    spec:
      containers:
        - name: tutorverse
          image: ghcr.io/mucks/tutorverse-frontend-rs:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerconfigjson-github-com
