tutorverse-frontend/kubernetes/eduverse-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tutorverse
  namespace: tutorverse
spec:
  selector:
    app: tutorverse
  ports:
    - port: 80
      targetPort: 80
