tutorverse-frontend/kubernetes/eduverse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorverse
  namespace: tutorverse
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "default-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-http-to-https@kubernetescrd
spec:
  tls:
    - hosts:
        - tutorverse.mucks.dev
      secretName: tls-tutorverse-mucks-dev
  rules:
    - host: tutorverse.mucks.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutorverse
                port:
                  number: 80
